fixed button spacing

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -49,6 +49,12 @@
       max-width: 40%;
     }
   }
+  .about-text{
+    margin-bottom: 5%;
+  }
+  .resume{
+    margin-bottom: 5%;
+  }
 }
 
 @include media-lg{
